--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "student ID": "10132510139",
-    "password": "Czy_84963496432",
-    "start time": "2019-01-13 17:00", 
-    "end time": "2019-01-13 17:30"
+    "student ID": "xxxx",
+    "password": "xxxx",
+    "start time": "xxxx-xx-xx xx:xx", 
+    "end time": "xxxx-xx-xx xx:xx"
 }
